--- a/roboshop/cart.yml
+++ b/roboshop/cart.yml
@@ -1,13 +1,26 @@
 apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: cart
+  annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::699776063346:role/aws-ssm-EKS
+    
+---
+apiVersion: v1
 kind: Pod
 metadata:
   name: cart
   labels:
     component: cart
 spec:
+  serviceAccountName: cart
   containers:
     - name: cart
       image: 699776063346.dkr.ecr.us-east-1.amazonaws.com/cart:2.0.0
+  initContainer:
+    - name: aws-ssm-param-store
+      image: 699776063346.dkr.ecr.us-east-1.amazonaws.com/aws-ssm-param-store:2.0.0
+      args: ["sample:dev.docdb.pass"]
 
 ---
 
